# genbase

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  repomix-output.txt
engine/: .dockerignore  .example.env  .pdm-python  Dockerfile  README.md  alembic.ini  pyproject.toml  rbac_model.conf  ruff.toml
engine/src/base/agents/: __init__.py  tasker.py
engine/src/engine/: const.py  main.py  rbac_model.conf  supported_content_types.json
engine/src/engine/apis/: _rpyc_test.py  action.py  agent.py  authz.py  chat.py  coder.py  gateway.py  kit.py  llm_gateway.py  model.py  module.py  profile.py  project.py  repository.py  resource.py  tasker.py  tool.py  workflow.py  workspace.py
engine/src/engine/apis/models/: embedding.py
engine/src/engine/auth/: casbin_setup.py  dependencies.py  superuser.py  users.py
engine/src/engine/base/agents/: __init__.py  tasker.py
engine/src/engine/config/: profile_config.py  workflow_config.py
engine/src/engine/db/: __init__.py  base.py  encryption_utils.py  models.py  session.py
engine/src/engine/db/migrations/: env.py
engine/src/engine/instructions/: context.py
engine/src/engine/services/: platform_rpyc_service.py  platform_service.py
engine/src/engine/services/agents/: agent_utils.py  base_agent.py  chat_history.py  code_edit.py  coder.py  coder_agent.py  coder_util.py  context.py  edit_utils.py  generative_elements.py  giml_definitions.py  next_agent.py  next_tasker.py  tasker.py  types.py
engine/src/engine/services/core/: agent_loader.py  api_key.py  kit.py  module.py  project.py
engine/src/engine/services/execution/: action.py  agent.py  agent_execution.py  custom_actions.py  function_parser.py  internal_actions.py  internal_tools.py  model.py  profile.py  profile_config.py  profile_store.py  stage_state.py  state.py  tool.py  workflow.py  workflow_store.py
engine/src/engine/services/storage/: embedder.py  repository.py  resource.py  vector_store.py  workspace.py
engine/src/engine/utils/: chat_compression.py  file.py  logging.py  uid.py  xml_prompts.py  yaml.py
engine/tests/: conftest.py
engine/tests/services/agents/: test_base_agent.py  test_chat_history.py
engine/tests/services/core/: test_agent_loader.py  test_api_key.py  test_kit.py  test_kit_service.py  test_module.py  test_module_service.py  test_project.py  test_project_service.py
engine/tests/services/execution/: test_function_parser.py  test_internal_actions.py  test_model.py  test_profile_store.py  test_state.py  test_state_service.py
engine/tests/services/storage/: test_repo_service.py  test_repository.py  test_resource_service.py
engine/tests/utils/: test_utils.py
src/engine/: .pdm-python  pyproject.toml
src/engine/src/engine/: main.py
src/engine/src/engine/apis/: model.py  module.py  operation.py  project.py  repository.py  resource.py  runtime_module.py
(+341 files in other folders)
